# diploma

./: .gitignore  README.md  config.py  pyproject.toml  pytest.ini
diploma/pages/api/: token.py
diploma/pages/mobile/: mobile_basket_page.py  mobile_catalog_page.py  mobile_favorites_page.py  skip_promo_widget_page.py
diploma/pages/web/: basket_page.py  city_page.py  favorites_page.py  login_page.py  search_page.py
diploma/utils/: file.py  request_helper.py
kazanexpress_project_api_mobile_ui/pages/mobile/: mobile_basket_page.py  mobile_catalog_page.py  mobile_favorites_page.py  skip_promo_widget_page.py
kazanexpress_project_api_mobile_ui/pages/web/: basket_page.py  city_page.py  favorites_page.py  login_page.py  search_page.py
kazanexpress_project_api_mobile_ui/utils/: attach.py  file.py  request_helper.py
schemas/: schema_get_cities.py  schema_get_product.py
tests/api_tests/: test_get_cities.py  test_get_product.py  test_post_add_to_favorites.py  test_post_delet_from_favorites.py  test_post_user_contacts.py
tests/mobile_tests/: conftest.py  test_add_to_basket_mobile.py  test_add_to_favorites_mobile.py  test_catalog_mobile.py  test_delete_from_basket_mobile.py  test_delete_from_favorites_mobile.py
tests/web_tests/: conftest.py  test_add_to_basket.py  test_add_to_favorites.py  test_delete_from_basket.py  test_delete_from_favorites.py  test_login_button.py  test_login_negative.py  test_search_positive.py  test_set_city.py
